[gd_scene load_steps=5 format=3 uid="uid://cshu28xurb4cp"]

[ext_resource type="Script" path="res://main/main_game_scene_pages/战术设置.gd" id="1_x6v2w"]
[ext_resource type="StyleBox" uid="uid://ck8q8tx4coexd" path="res://assets/main_scene/GUI/label_style_box_flat2.tres" id="2_4p7x4"]
[ext_resource type="PackedScene" uid="uid://bkali61blb26g" path="res://main/main_game_scene_pages/turn_action_container.tscn" id="2_o806a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdkfy"]

[node name="战术设置" type="Panel"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_tdkfy")
script = ExtResource("1_x6v2w")

[node name="TacticSavesContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 11.0
offset_right = 264.0
offset_bottom = 36.0

[node name="TacticSavesOptionButton" type="OptionButton" parent="TacticSavesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveTactic" type="Button" parent="TacticSavesContainer"]
layout_mode = 2
text = "保存"

[node name="DeleteTactic" type="Button" parent="TacticSavesContainer"]
layout_mode = 2
text = "删除
"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 56.0
offset_right = 272.0
offset_bottom = 632.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PositionContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="PositionLabel" type="Label" parent="ScrollContainer/VBoxContainer/PositionContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_4p7x4")
text = "站位"
vertical_alignment = 1

[node name="PostionOptionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/PositionContainer"]
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
selected = 0
popup/item_0/text = "前排"
popup/item_0/id = 0
popup/item_1/text = "中间"
popup/item_1/id = 1
popup/item_2/text = "后排"
popup/item_2/id = 2

[node name="AutoHealContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AutoHealLabel" type="Label" parent="ScrollContainer/VBoxContainer/AutoHealContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_4p7x4")
text = "自动治疗"
vertical_alignment = 1

[node name="AutoHealOptionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/AutoHealContainer"]
layout_mode = 2
size_flags_horizontal = 0
item_count = 2
selected = 1
popup/item_0/text = "启用"
popup/item_0/id = 0
popup/item_1/text = "不启用"
popup/item_1/id = 1

[node name="RetreatContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RetreatLabel" type="Label" parent="ScrollContainer/VBoxContainer/RetreatContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_4p7x4")
text = "自动撤退"
vertical_alignment = 1

[node name="RetreatOptionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/RetreatContainer"]
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
selected = 0
popup/item_0/text = "低于30%最大血量"
popup/item_0/id = 0
popup/item_1/text = "低于50%最大血量"
popup/item_1/id = 1
popup/item_2/text = "死战不退"
popup/item_2/id = 2

[node name="LevelTabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 16.0
offset_right = 1240.0
offset_bottom = 640.0
drag_to_rearrange_enabled = true

[node name="默认" parent="LevelTabContainer" instance=ExtResource("2_o806a")]
layout_mode = 2

[node name="+" type="Panel" parent="LevelTabContainer"]
visible = false
layout_mode = 2

[node name="-" type="Panel" parent="LevelTabContainer"]
visible = false
layout_mode = 2

[connection signal="item_selected" from="TacticSavesContainer/TacticSavesOptionButton" to="." method="_on_tactic_saves_option_button_item_selected"]
[connection signal="pressed" from="TacticSavesContainer/SaveTactic" to="." method="_on_save_tactic_pressed"]
[connection signal="tab_clicked" from="LevelTabContainer" to="." method="_on_level_tab_container_tab_clicked"]
